[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "leginoncli"
version = "2025.09.08"
readme = "README.md"
description = "A command line interface that gives microscope operators the ability to add users to projects and move sessions between projects."
license = "Apache-2.0"
authors = [
	{ name = "John Pellman", email = "john+github@libjpel.so"}, 
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
  "sinedon @ git+https://github.com/nysbc/sinedon.git",
  "prettytable"
]

requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/nysbc/leginon-cli/"
Issues = "https://github.com/nysbc/leginon-cli/issues"
